# abyss

./: .dockerignore  .gitignore  .tokeignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  build.sh  cross.sh  db.sh  kelp.sh  market.js  prometheus.yml  run.sh  sail.toml  test.sh
.github/workflows/: ci.yml
.ipynb_checkpoints/: notebook-checkpoint.ipynb
app/: bun.lockb  index.html  package.json
app/src/: App.jsx  Demo.jsx  main.jsx  store.js
app/src-tauri/: Cargo.toml  tauri.conf.json
cert/: gen.sh
coral/android/: build.gradle  settings.gradle
coral/android/app/: build.gradle
coral/android/app/src/main/: AndroidManifest.xml
coral/android/gradle/wrapper/: gradle-wrapper.properties
coral/coral/: .eslintrc.js  package.json  tsconfig.json
coral/coral/config/: config.ts  defaultSettings.ts  proxy.ts
coral/coral/mock/: notices.ts  user.ts
coral/coral/public/: manifest.json
coral/coral/src/: access.ts  app.tsx  service-worker.js  typings.d.ts
coral/coral/src/components/NoticeIcon/: index.less  index.tsx
coral/coral/src/components/RightContent/: AvatarDropdown.tsx  index.less  index.tsx
coral/coral/src/pages/: NetworkStatus.tsx  document.ejs
coral/coral/src/pages/TableList/: index.tsx
coral/coral/src/pages/account/center/: index.tsx  service.ts
coral/coral/src/pages/account/register/: _mock.ts  index.tsx  service.ts
coral/coral/src/pages/account/register-result/: index.tsx
coral/coral/src/pages/account/settings/: index.tsx  service.ts
coral/coral/src/pages/components/KlineChart/: StockChart.tsx  Updating.tsx  index.tsx
coral/coral/src/pages/components/data/: data.d.ts  service.ts  withOHLCData.tsx  withUpdatingData.tsx
coral/coral/src/pages/database/search/: index.tsx
coral/coral/src/services/abyss/: api.ts  typings.d.ts
coral/coral/src/utils/: index.ts
coral/ui/: package.json
data/xtp/: changelist.txt
docker/builder/: Dockerfile  entrypoint.sh
docker/node/: Dockerfile  entrypoint.sh
docker/runner/: Dockerfile
examples/: fuse.txt
exchange/ctp/: Cargo.toml  README.md  build.rs
exchange/ctp/ctp-sys/: Cargo.toml  build.rs  compile_flags.txt
exchange/ctp/ctp-sys/ctp/: ctp.cc  ctp.h  mdapi.cc  mdspi.cc  traderapi.cc  traderspi.cc
exchange/ctp/ctp-sys/ctp/v6_3_13/: error.xml
exchange/ctp/ctp-sys/ctp/v6_3_19/: error.xml
exchange/ctp/ctp-sys/ctp/v6_3_19/ios/include/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
exchange/ctp/ctp-sys/data/: v6.3.19_P1_20200106tradeAPI.TXT
exchange/ctp/ctp-sys/src/: lib.rs
exchange/ctp/ctp-sys/src/ctp/: ctp.rs  mod.rs
exchange/ctp/ctp-sys/src/ctp/common/: error.rs  field.rs  mod.rs  opts.rs
exchange/ctp/ctp-sys/src/ctp/market/: api.rs  mod.rs  spi.rs
exchange/ctp/ctp-sys/src/ctp/trader/: api.rs  mod.rs  spi.rs
exchange/ctp/ctp-sys/src/ext/: market.rs  mod.rs  trader.rs
exchange/ctp/node/: README.md  package-lock.json  package.json
exchange/ctp/node/native/: Cargo.toml
exchange/ctp/node/native/src/: lib.rs
exchange/ctp/node/native/src/market/: functions.rs  mod.rs
exchange/ctp/node/native/src/trader/: functions.rs  mod.rs
exchange/ctp/proto/: ctp.proto  index.proto
exchange/ctp/src/: lib.rs  mac.rs  metrics.rs
exchange/ctp/src/ctp/: mod.rs
exchange/ctp/src/ctp/market/: mod.rs  node.rs  utils.rs
exchange/ctp/src/ctp/trader/: mod.rs  node.rs  utils.rs
exchange/ctp/src/mock/: mod.rs
exchange/ctp/src/rpc/: mod.rs
exchange/xtp/: Cargo.toml
exchange/xtp/xtp-sys/: Cargo.toml
kelp/: Cargo.toml
kelp/src/: lib.rs
lua/ctp/market/: config.lua  products.lua  tick.lua
lua/ctp/trader/: config.lua
lua/database/postgres/: config.lua
lua/script/: db.lua
lua/strategy/: run.lua
lua/test/script/: db.lua
perm/: policy.csv
sailfish/: Cargo.toml
sailfish/src/: config.rs  error.rs  lib.rs  metrics.rs  runner.rs
sailfish/src/endpoints/prometheus/: mod.rs
scripts/: sys-permision.sh
sql/: compress-tool.sql  day-correct.sql  diff.sql  dump.sh  init.sql  kline.sql  matview.sql  merge.sh  metric.sql  spread.sql  tick-view.sql  ticks.sql
systemd/: cta.service  data-collect.service  data-serve.service  run.sh
tests/: tq_get_quote.py
turtle/: Cargo.toml
turtle/src/: lib.rs  mac.rs
turtle/src/indicator/: mod.rs
turtle/src/kline/: mod.rs
turtle/src/stats/: mod.rs
turtle/src/strategy/: mean_reversion.rs  mod.rs
turtle/src/strategy/cta/: long.rs  mod.rs  short.rs
turtle/src/strategy/lua/: class.lua  inspect.lua  mod.rs
utils/bouncer/: Cargo.toml
utils/bouncer/src/: lib.rs
utils/common/: Cargo.toml
utils/common/src/: config.rs  error.rs  lib.rs  metrics.rs
utils/common/src/endpoints/http/: mod.rs
utils/common/src/endpoints/http/middleware/: mod.rs
utils/common/src/endpoints/http/middleware/auth/: mod.rs  perm.rs
utils/common/src/endpoints/http/middleware/logger/: mod.rs  trace.rs
utils/common/src/task/: executor.rs  mod.rs  prometheus_future.rs
utils/lua/: Cargo.toml  lua_reload.lua
utils/lua/benches/: lua.rs
utils/lua/examples/: lua-config-reload.rs  lua-loop.rs
utils/lua/examples/plugins/: demo.lua  list.lua  loop.lua
utils/lua/examples/plugins/tools/: init.lua
utils/lua/src/: lib.rs
utils/macros/: Cargo.toml
utils/macros/src/: lib.rs
utils/pagecache/: Cargo.toml
utils/pagecache/src/: config.rs  iobuf.rs  iterator.rs  lib.rs  logger.rs  metrics.rs  pagecache.rs  parallel_io.rs  segment.rs  snapshot.rs
utils/pagecache/src/ds/: stack.rs
utils/plotters/: Cargo.toml
utils/plotters/src/element/: candlestick.rs
utils/promise/: Cargo.toml
utils/promise/src/: lib.rs  pool.rs
utils/queue/: Cargo.toml
utils/queue/src/: bouncer.rs  error.rs  lib.rs  mac.rs
utils/queue/src/driver/: mod.rs  redis.rs
utils/queue/src/puber/: amqp.rs  mod.rs  redis.rs
utils/queue/src/suber/: amqp.rs  mod.rs  redis.rs
utils/sled/src/: config.rs  ivec.rs  lib.rs  subscriber.rs  tree.rs
utils/sled/src/pagecache/: snapshot.rs
utils/subscriber/: Cargo.toml
utils/subscriber/src/: lib.rs
utils/wait/: Cargo.toml
utils/wait/src/: lib.rs
(+74 files in other folders)
