[package]
name = "sailfish"
version = "0.1.0"
edition = "2021"

[dependencies]
# abyss utils
abyss-common = "*"

futures-lite = "1.12"

tracing = "*"
tracing-futures = "*"
tracing-subscriber = { version="*", features=["env-filter"] }
futures = "0.3.27"
binance = { version = "0.20.2", features = ["vendored-tls"] }
thiserror = "1.0.39"
displaydoc = "0.2.3"
lazy_static = "1.4.0"
serde = { version = "1.0.155", features = ["derive"] }
toml = "0.7.2"
dirs = "4.0.0"
tide = "0.16.0"

[dependencies.clap]
version = "4.1.8"
features = ["derive"]


[dependencies.jemallocator]
version = "0.5.0"
features = ["profiling"]
[dependencies.jemalloc-ctl]
version = "0.5.0"
[dependencies.jemalloc-sys]
version = "0.5.0"
features = ["stats", "profiling"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread", "signal"]

[dependencies.prometheus]
version = "*"
features = ["process"]

[[bin]]
name = "sailfish"
path = "bin/sailfish.rs"
