[package]
name = "ctp"
version = "1.0.1"
authors = ["徐敏辉 <xuminhui189@gmail.com>"]
description = "CTP(v6.7.0) 接口封装"
edition = "2021"
publish = false

[dependencies]
# abyss utils
abyss-subscriber = "0.1"
abyss-bouncer = "0.1"
abyss-promise = { version = "*", optional = true }
abyss-wait = "0.1"

cfg-if = "^1"
displaydoc = "0.2"
auto_impl = "1.1"
paste = "1.0"
lazy_static = "*"
rand = "*"
parking_lot = "0.12"
crossbeam = "0.8"
crossbeam-channel = { version = "*", optional = true }
async-channel = { version = "2.1", optional = true }
async-trait = { version = "*", optional = true }
futures = { version = "*", optional = true }
tracing = "0.1.37"

[dependencies.ctp-sys]
path = "./ctp-sys"

[dependencies.prometheus]
version = "*"
optional = true

[dependencies.nodex]
version = "^0.2"
features = ["v4"]
optional = true

# [dependencies.tonic]
# version = "0.6"
# features = ["tls"]
# optional = true

# [build-dependencies]
# tonic-build = {version="0.6", optional=true}

# [dependencies.prost]
# version = "0.9"
# optional = true

# [dependencies.serde_json]
# version = "*"
# optional = true

[features]
default = []
# grpc = ["tonic", "tonic-build", "prost", "serde_json"]
sync = []
metrics = ["prometheus"]
async = ["futures", "async-trait", "async-channel"]
v6_3_13 = ["ctp-sys/v6_3_13"]
v6_3_15 = ["ctp-sys/v6_3_15"]
v6_3_19 = ["ctp-sys/v6_3_19"]
# FIXME: 版本差异太大, 需要时间做迁移和测试
# v6_7_0  = ["ctp-sys/v6_7_0"]
no-linkage = ["ctp-sys/no-linkage"]
node = ["nodex", "abyss-promise", "crossbeam-channel"]
