[package]
name = "abyss-common"
version = "0.1.0"
edition = "2021"
description = "通用工具"

[dependencies]
# abyss utils
abyss-subscriber = "0.1"
abyss-promise = "0.2"

async-trait = "0.1.51"
displaydoc = "0.2.4"
futures = "0.3.26"
parking_lot = "0.12.1"
prometheus = "0.13.3"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-futures = "0.2.5"
pin-project = "1.0.12"
casbin = "2.1"
lazy_static = "1.4.0"
serde = "1.0.152"
include_dir = "0.7.3"
regex = "1.10"

[dependencies.tide]
version = "0.16"
default-features = false
features = ["h1-server", "cookies", "sessions"]
