[package]
name = "abyss-queue"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
thiserror = "1.0.30"
parking_lot = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lapin = "2.0.3"
spin_sleep = "1.1.0"
async-global-executor = "2.0.3"
futures-lite = "1.12.0"

[dependencies.redis]
version = "0.21.5"

[dependencies.nodex]
version = "~0.2"
features = ["v8"]
