[package]
name = "ctp-sys"
version = "1.0.1+ctp.6.7.0"
authors = ["徐敏辉 <xuminhui189@gmail.com>"]
edition = "2021"
license = "MIT"
include = ["lib/**/*", "src/**/*", "ctp/**/*", "build.rs", "Cargo.toml"]
description = "ctp"
homepage = "https://github.com/uuhan/abyss"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
# abyss-utils
abyss-macros = "*"

encoding_rs = "0.8.23"
displaydoc = "0.2"
bincode = { version = "1.3.2", optional = true }
smallvec = "1.6"
chrono = "*"
cfg-if = "*"
async-ffi = { version = "0.5", optional = true }
serde-big-array = "0.5"
paste = "1.0"
tracing = "0.1.37"

[dependencies.serde]
version = "1.0.115"
features = ["derive"]

[dev-dependencies]
simple_logger = "*"

[build-dependencies]
cc = "1.0.58"
bindgen = { version = "0.69", optional = true }
cfg-if = "*"
fs_extra = "1.1.0"

[features]
default = ["bincode"]
v6_3_13 = []
v6_3_15 = []
v6_3_19 = []
# FIXME: 版本差异太大, 需要时间做迁移和测试
# v6_7_0 = []
ctpbind = ["bindgen"]
async = ["async-ffi"]
no-linkage = []
